# backend_game_lobby

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: linters.yml
database/: dp.py
models/: game.py  lobby_manager.py  player.py  team.py  vulture_whitelist.py
src/: main.py
src/auth/: auth_middleware.py  auth_routes.py  jwt_utils.py
src/database/: databse.sql  dp.py
src/models/: game.py  lobby_manager.py  player.py  team.py
