[tool.poetry]
name = "backend-game-lobby"
version = "0.1.0"
description = "Backend for game lobby"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9"
asyncio = "*"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
types-psycopg2 = "^2.9.21"
vulture = "^2.10"
ruff = "^0.1.0"
flake8 = "^6.1.0"
wemake-python-styleguide = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"